# cl-institute

./: .gitignore  architecture-diagrams.md  db_layout.sql  decision_ontology.md  devbox.json  intelligent-institution-architecture.md  ts-agentic-execution.md  wf-interview.md  workflow-execution-spec.md
.claude/: settings.local.json
archive/iii-spike/: package.json  tsconfig.json
archive/iii-spike/fixtures/: vendor-acme.json
archive/iii-spike/ts/: tsconfig.json
archive/rust/crates/inst-audit/: Cargo.toml
archive/rust/crates/inst-audit/src/: filter.rs  log.rs
archive/rust/crates/inst-cli/: Cargo.toml
archive/rust/crates/inst-cli/src/: context.rs  output.rs
archive/rust/crates/inst-cli/src/commands/: audit.rs  edge.rs  init.rs  node.rs  org.rs  policy.rs  workflow.rs
archive/rust/crates/inst-constraint/: Cargo.toml
archive/rust/crates/inst-constraint/src/constraints/: edge_node_reference.rs
docs/plans/: 2026-03-05-workflow-engine-architecture-design.md  2026-03-05-workflow-engine-implementation.md  2026-03-06-agent-runner-design.md  2026-03-06-agent-runner-implementation.md  2026-03-07-venue-scout-e2e-design.md  2026-03-07-venue-scout-e2e-implementation.md
docs/tools/: devbox.md
examples/acme-foundation/: institution.toml
examples/acme-foundation/integrations/: docusign.toml  registry.toml  sap.toml
iii-spike/: package-lock.json
iii-spike/src/: index.ts
iii-spike/src/agent/: executor.ts  llm.ts
iii-spike/ts/: package.json
rust/: Cargo.toml
rust/crates/inst-audit/src/: entry.rs  error.rs  lib.rs  verification.rs
rust/crates/inst-cli/src/: error.rs  main.rs
rust/crates/inst-cli/src/commands/: function.rs  graph.rs  integration.rs  mod.rs  role.rs
rust/crates/inst-constraint/src/: engine.rs  lib.rs  traits.rs  types.rs
rust/crates/inst-constraint/src/constraints/: authority_level_check.rs  edge_node_reference.rs  graph_connectivity.rs  mod.rs  no_cyclic_dependency.rs  required_policy_scope.rs  unique_names.rs
rust/crates/inst-constraint/tests/: engine_tests.rs
rust/crates/inst-model/src/: decision.rs  edge.rs  error.rs  instance.rs  integration.rs  lib.rs  organization.rs  role.rs
rust/crates/inst-store/: Cargo.toml
rust/crates/inst-store/src/: error.rs  lib.rs  project.rs
rust/src/: main.rs
typescript/: package-lock.json  package.json  tsconfig.json
typescript/fixtures/: risk-policy.md
typescript/src/: index.ts
(+81 files in other folders)
