[workspace]
members = [
    "crates/inst-model",
    "crates/inst-store",
    "crates/inst-constraint",
    "crates/inst-audit",
    "crates/inst-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"
