[package]
name = "inst-store"
version.workspace = true
edition.workspace = true

[dependencies]
inst-model = { path = "../inst-model" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
